--- a/user/prod/style.css
+++ b/user/prod/style.css
@@ -7,12 +7,14 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-violet-50: oklch(96.9% 0.016 293.756);
-    --color-violet-950: oklch(28.3% 0.141 291.089);
     --color-gray-200: oklch(92.8% 0.006 264.531);
-    --color-black: #000;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
+    --color-frappe-950: #c6d0f5;
+    --color-frappe-650: #626880;
+    --color-frappe-600: #51576d;
+    --color-frappe-550: #414559;
+    --color-frappe-500: #303446;
   }
 }
 @layer base {
@@ -183,29 +185,23 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .bg-black {
-    background-color: var(--color-black);
+  .bg-frappe-500 {
+    background-color: var(--color-frappe-500);
   }
-  .bg-black\/34 {
-    background-color: color-mix(in srgb, #000 34%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-black) 34%, transparent);
-    }
+  .bg-frappe-550 {
+    background-color: var(--color-frappe-550);
   }
-  .bg-black\/35 {
-    background-color: color-mix(in srgb, #000 35%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-black) 35%, transparent);
-    }
+  .bg-frappe-600 {
+    background-color: var(--color-frappe-600);
+  }
+  .bg-frappe-650 {
+    background-color: var(--color-frappe-650);
+  }
+  .bg-frappe-950 {
+    background-color: var(--color-frappe-950);
   }
   .bg-gray-200 {
     background-color: var(--color-gray-200);
-  }
-  .bg-violet-50 {
-    background-color: var(--color-violet-50);
-  }
-  .bg-violet-950 {
-    background-color: var(--color-violet-950);
   }
   .underline {
     text-decoration-line: underline;
