--- a/user/prod/style.css
+++ b/user/prod/style.css
@@ -10,12 +10,18 @@
       "Courier New", monospace;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --radius-lg: 0.5rem;
+    --radius-xl: 0.75rem;
+    --drop-shadow-md: 0 3px 3px rgb(0 0 0 / 0.12);
     --drop-shadow-lg: 0 4px 4px rgb(0 0 0 / 0.15);
     --drop-shadow-xl: 0 9px 7px rgb(0 0 0 / 0.1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --color-frappe-950: #c6d0f5;
+    --color-frappe-900: #b5bfe2;
+    --color-frappe-850: #a5adce;
     --color-frappe-700: #737994;
+    --color-frappe-650: #626880;
     --color-frappe-600: #51576d;
     --color-frappe-550: #414559;
     --color-frappe-500: #303446;
@@ -182,6 +188,12 @@
   .h-13 {
     height: calc(var(--spacing) * 13);
   }
+  .h-20 {
+    height: calc(var(--spacing) * 20);
+  }
+  .h-30 {
+    height: calc(var(--spacing) * 30);
+  }
   .h-full {
     height: 100%;
   }
@@ -191,8 +203,17 @@
   .w-3 {
     width: calc(var(--spacing) * 3);
   }
+  .w-13 {
+    width: calc(var(--spacing) * 13);
+  }
+  .w-13\/14 {
+    width: calc(13/14 * 100%);
+  }
   .w-130 {
     width: calc(var(--spacing) * 130);
+  }
+  .w-full {
+    width: 100%;
   }
   .w-screen {
     width: 100vw;
@@ -224,6 +245,12 @@
   .resize {
     resize: both;
   }
+  .flex-col {
+    flex-direction: column;
+  }
+  .flex-row {
+    flex-direction: row;
+  }
   .items-center {
     align-items: center;
   }
@@ -233,8 +260,29 @@
   .justify-center {
     justify-content: center;
   }
+  .divide-dashed {
+    :where(& > :not(:last-child)) {
+      --tw-border-style: dashed;
+      border-style: dashed;
+    }
+  }
+  .divide-solid {
+    :where(& > :not(:last-child)) {
+      --tw-border-style: solid;
+      border-style: solid;
+    }
+  }
+  .rounded {
+    border-radius: 0.25rem;
+  }
   .rounded-full {
     border-radius: calc(infinity * 1px);
+  }
+  .rounded-lg {
+    border-radius: var(--radius-lg);
+  }
+  .rounded-xl {
+    border-radius: var(--radius-xl);
   }
   .border {
     border-style: var(--tw-border-style);
@@ -251,6 +299,9 @@
   .border-frappe-700 {
     border-color: var(--color-frappe-700);
   }
+  .border-frappe-850 {
+    border-color: var(--color-frappe-850);
+  }
   .bg-frappe-500 {
     background-color: var(--color-frappe-500);
   }
@@ -259,6 +310,12 @@
   }
   .bg-frappe-600 {
     background-color: var(--color-frappe-600);
+  }
+  .bg-frappe-650 {
+    background-color: var(--color-frappe-650);
+  }
+  .bg-frappe-850 {
+    background-color: var(--color-frappe-850);
   }
   .p-1 {
     padding: calc(var(--spacing) * 1);
@@ -278,6 +335,15 @@
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
   }
+  .py-1 {
+    padding-block: calc(var(--spacing) * 1);
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
+  }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
+  }
   .ps-3 {
     padding-inline-start: calc(var(--spacing) * 3);
   }
@@ -287,11 +353,26 @@
   .pe-3 {
     padding-inline-end: calc(var(--spacing) * 3);
   }
+  .pe-4 {
+    padding-inline-end: calc(var(--spacing) * 4);
+  }
   .text-center {
     text-align: center;
   }
+  .text-left {
+    text-align: left;
+  }
+  .align-middle {
+    vertical-align: middle;
+  }
   .font-\[DM_Sans\] {
     font-family: DM Sans;
+  }
+  .text-frappe-850 {
+    color: var(--color-frappe-850);
+  }
+  .text-frappe-900 {
+    color: var(--color-frappe-900);
   }
   .text-frappe-950 {
     color: var(--color-frappe-950);
@@ -313,6 +394,11 @@
   .drop-shadow-lg {
     --tw-drop-shadow-size: drop-shadow(0 4px 4px var(--tw-drop-shadow-color, rgb(0 0 0 / 0.15)));
     --tw-drop-shadow: drop-shadow(var(--drop-shadow-lg));
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .drop-shadow-md {
+    --tw-drop-shadow-size: drop-shadow(0 3px 3px var(--tw-drop-shadow-color, rgb(0 0 0 / 0.12)));
+    --tw-drop-shadow: drop-shadow(var(--drop-shadow-md));
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .drop-shadow-xl {
